--- a/O-LoebSeleniumUITest/O-LoebSeleniumUITest.csproj
+++ b/O-LoebSeleniumUITest/O-LoebSeleniumUITest.csproj
@@ -15,6 +15,8 @@
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
     <PackageReference Include="coverlet.collector" Version="3.2.0" />
+    <PackageReference Include="Selenium.Support" Version="4.15.0" />
+    <PackageReference Include="Selenium.WebDriver" Version="4.15.0" />
   </ItemGroup>
 
 </Project>
